@@ -26,51 +26,120 @@ package com.questhelper.helpers.quests.monksfriend;
 
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
-import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ExperienceReward;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 
-import java.util.*;
-
 public class MonksFriend extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement jugOfWater, log, blanket;
+	// Required items
+	ItemRequirement jugOfWater;
+	ItemRequirement log;
 
-	//Items Recommended
+	// Recommended items
 	ItemRequirement ardougneCloak;
 
-	Requirement inDungeon;
-
-	QuestStep talkToOmad, goDownLadder, grabBlanket, goUpLadder, returnToOmadWithBlanket, talkToOmadAgain, talkToCedric, talkToCedricWithJug,
-		continueTalkingToCedric, talkToCedricWithLog, finishQuest;
-
-	//Zones
+	// Zones
 	Zone dungeon;
+
+	// Miscellaneous requirements
+	ItemRequirement blanket;
+
+	ZoneRequirement inDungeon;
+
+	// Steps
+	NpcStep talkToOmad;
+	ObjectStep goDownLadder;
+	DetailedQuestStep grabBlanket;
+	ObjectStep goUpLadder;
+	NpcStep returnToOmadWithBlanket;
+	NpcStep talkToOmadAgain;
+	NpcStep talkToCedric;
+	NpcStep talkToCedricWithJug;
+	NpcStep continueTalkingToCedric;
+	NpcStep talkToCedricWithLog;
+	NpcStep finishQuest;
+
+	@Override
+	protected void setupZones()
+	{
+		dungeon = new Zone(new WorldPoint(2559, 9597, 0), new WorldPoint(2582, 9623, 0));
+	}
+
+	@Override
+	protected void setupRequirements()
+	{
+		inDungeon = new ZoneRequirement(dungeon);
+
+		log = new ItemRequirement("Logs", ItemID.LOGS);
+		jugOfWater = new ItemRequirement("Jug of Water", ItemID.JUG_WATER);
+		blanket = new ItemRequirement("Child's blanket", ItemID.CHILDS_BLANKET);
+		ardougneCloak = new ItemRequirement("Ardougne cloak 1 or higher for teleports to the monastery", ItemID.CERT_ARRAVCERTIFICATE).isNotConsumed();
+	}
+
+	public void setupConditions()
+	{
+	}
+
+	public void setupSteps()
+	{
+		talkToOmad = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Talk to Brother Omad in the monastery south of East Ardougne.");
+		talkToOmad.addDialogStep("Why can't you sleep, what's wrong?");
+		talkToOmad.addDialogStep("Yes.");
+
+		goDownLadder = new ObjectStep(this, ObjectID.LADDER_OUTSIDE_TO_UNDERGROUND, new WorldPoint(2561, 3222, 0), "Go down the ladder in a circle of stones west of the monastery.");
+		grabBlanket = new DetailedQuestStep(this, new WorldPoint(2570, 9604, 0), "Pick up the Child's blanket in the room to the south.", blanket);
+		goUpLadder = new ObjectStep(this, ObjectID.LADDER_FROM_CELLAR, new WorldPoint(2561, 9622, 0), "Go back up the ladder.", blanket);
+		returnToOmadWithBlanket = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Bring the blanket back to Brother Omad in the monastery.", blanket);
+
+		talkToOmadAgain = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Talk to Brother Omad again.");
+		talkToOmadAgain.addDialogStep("Is there anything else I can help with?");
+		talkToOmadAgain.addDialogStep("Who's Brother Cedric?");
+		talkToOmadAgain.addDialogStep("Where should I look?");
+
+		talkToCedric = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric north of the monastery.");
+
+		talkToCedricWithJug = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric again.", jugOfWater);
+		talkToCedricWithJug.addDialogStep("Yes, I'd be happy to!");
+		continueTalkingToCedric = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric again.");
+		continueTalkingToCedric.addDialogStep("Yes, I'd be happy to!");
+		talkToCedricWithJug.addSubSteps(continueTalkingToCedric);
+
+		talkToCedricWithLog = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric once again with logs.", log);
+
+		finishQuest = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Return to Brother Omad to finish the quest.");
+	}
 
 	@Override
 	public Map<Integer, QuestStep> loadSteps()
 	{
 		initializeRequirements();
-		setupConditions();
 		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
+
+		var steps = new HashMap<Integer, QuestStep>();
 
 		steps.put(0, talkToOmad);
 
-		ConditionalStep getBlanket = new ConditionalStep(this, goDownLadder);
-		getBlanket.addStep(new Conditions(inDungeon, blanket.alsoCheckBank(questBank)), goUpLadder);
+		var getBlanket = new ConditionalStep(this, goDownLadder);
+		getBlanket.addStep(and(inDungeon, blanket.alsoCheckBank(questBank)), goUpLadder);
 		getBlanket.addStep(blanket.alsoCheckBank(questBank), returnToOmadWithBlanket);
 		getBlanket.addStep(inDungeon, grabBlanket);
 
@@ -87,63 +156,20 @@ public class MonksFriend extends BasicQuestHelper
 	}
 
 	@Override
-	protected void setupRequirements()
-	{
-		log = new ItemRequirement("Logs", ItemID.LOGS);
-		jugOfWater = new ItemRequirement("Jug of Water", ItemID.JUG_WATER);
-		blanket = new ItemRequirement("Child's blanket", ItemID.CHILDS_BLANKET);
-		ardougneCloak = new ItemRequirement("Ardougne cloak 1 or higher for teleports to the monastery", ItemID.CERT_ARRAVCERTIFICATE).isNotConsumed();
-	}
-
-	@Override
-	protected void setupZones()
-	{
-		dungeon = new Zone(new WorldPoint(2559, 9597, 0), new WorldPoint(2582, 9623, 0));
-	}
-
-	public void setupConditions()
-	{
-		inDungeon = new ZoneRequirement(dungeon);
-	}
-
-	public void setupSteps()
-	{
-		talkToOmad = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Talk to Brother Omad in the monastery south of West Ardougne.");
-		talkToOmad.addDialogStep("Why can't you sleep, what's wrong?");
-		talkToOmad.addDialogStep("Can I help at all?");
-		goDownLadder = new ObjectStep(this, ObjectID.LADDER_OUTSIDE_TO_UNDERGROUND, new WorldPoint(2561, 3222, 0), "Go down the ladder in a circle of stones west of the monastery.");
-		grabBlanket = new DetailedQuestStep(this, new WorldPoint(2570, 9604, 0), "Pick up the Child's blanket in the room to the south.", blanket);
-		goUpLadder = new ObjectStep(this, ObjectID.LADDER_FROM_CELLAR, new WorldPoint(2561, 9622, 0), "Go back up the ladder.");
-		returnToOmadWithBlanket = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Bring the blanket back to Brother Omad.", blanket);
-		talkToOmadAgain = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Talk to Brother Omad again.");
-		talkToOmadAgain.addDialogStep("Is there anything else I can help with?");
-		talkToOmadAgain.addDialogStep("Who's Brother Cedric?");
-		talkToOmadAgain.addDialogStep("Where should I look?");
-		talkToCedric = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric north of the monastery.");
-		talkToCedricWithJug = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric again.", jugOfWater);
-		talkToCedricWithJug.addDialogStep("Yes, I'd be happy to!");
-		continueTalkingToCedric = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric again.");
-		continueTalkingToCedric.addDialogStep("Yes, I'd be happy to!");
-		talkToCedricWithJug.addSubSteps(continueTalkingToCedric);
-		talkToCedricWithLog = new NpcStep(this, NpcID.BROTHER_CEDRIC, new WorldPoint(2614, 3258, 0), "Talk to Brother Cedric once again with logs.", log);
-		finishQuest = new NpcStep(this, NpcID.BROTHER_OMAD, new WorldPoint(2607, 3211, 0), "Return to Brother Omad to finish the quest.");
-	}
-
-	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(jugOfWater);
-		reqs.add(log);
-		return reqs;
+		return List.of(
+			jugOfWater,
+			log
+		);
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRecommended()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(ardougneCloak);
-		return reqs;
+		return List.of(
+			ardougneCloak
+		);
 	}
 
 	@Override
@@ -155,23 +181,46 @@ public class MonksFriend extends BasicQuestHelper
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Collections.singletonList(new ExperienceReward(Skill.WOODCUTTING, 2000));
+		return List.of(
+			new ExperienceReward(Skill.WOODCUTTING, 2000)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Law Runes", ItemID.LAWRUNE, 8));
+		return List.of(
+			new ItemReward("Law Runes", ItemID.LAWRUNE, 8)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
-		allSteps.add(new PanelDetails("Starting off", Collections.singletonList(talkToOmad), jugOfWater, log));
-		allSteps.add(new PanelDetails("Finding the blanket", Arrays.asList(goDownLadder, grabBlanket, goUpLadder, returnToOmadWithBlanket)));
-		allSteps.add(new PanelDetails("Help Cedric", Arrays.asList(talkToOmadAgain, talkToCedric, talkToCedricWithJug, talkToCedricWithLog, finishQuest)));
+		List<PanelDetails> sections = new ArrayList<>();
 
-		return allSteps;
+		sections.add(new PanelDetails("Starting off", List.of(
+			talkToOmad
+		), List.of(
+			jugOfWater,
+			log
+		)));
+
+		sections.add(new PanelDetails("Finding the blanket", List.of(
+			goDownLadder,
+			grabBlanket,
+			goUpLadder,
+			returnToOmadWithBlanket
+		)));
+
+		sections.add(new PanelDetails("Help Cedric", List.of(
+			talkToOmadAgain,
+			talkToCedric,
+			talkToCedricWithJug,
+			talkToCedricWithLog,
+			finishQuest
+		)));
+
+		return sections;
 	}
 }
